fix: Align frames to centre (#114)

--- a/src/Playroom/Preview/Preview.less
+++ b/src/Playroom/Preview/Preview.less
@@ -9,10 +9,12 @@
   overflow-y: hidden;
   white-space: nowrap;
   padding: @preview-padding 0;
+  text-align: center;
 }
 
 .frameContainer {
   display: inline-block;
+  text-align: left;
   position: relative;
   height: 97%;
   margin-right: @preview-padding;
